tests/generics/async_await_outside.diag
async_await_outside.ax:1:1: error: cannot await in non-async function
async_await_outside.ax:5:13: error: await can only be used inside async functions
